# cpp_swig_python_cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  hello.spec.in  install.sh  make-rpm.sh  make-tarball.sh
python/: CMakeLists.txt  hello.i  hello.py  hellotool.i
src/: hello.cpp  hello.h  utils.h
test/: CMakeLists.txt  test_hello.cpp  test_hello.py
